# mussia41

./: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  Taskfile.yml  Tiltfile  devbox.json  flake.nix  kcl.yaml  local.Dockerfile  main.k  nx.json  package-lock.json  package.json  pnpm-lock.yaml  requests.http  rustfmt.toml  workspace.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  tags.yml
apps/ci/ci_example/: Cargo.toml  project.json
apps/cloud/gcp/storage/src/: variables.tf
apps/manager/alina/: Cargo.toml  project.json
apps/manager/alina/src/: config.rs  error.rs  main.rs
apps/micro/book/: Cargo.toml  project.json
apps/micro/book/src/: main.rs
apps/operators/orc/: Cargo.toml  project.json
apps/operators/orc/src/: main.rs  swagger.rs
apps/operators/orc/src/api/: mod.rs
apps/operators/orc/src/api/book/: config.rs  controller.rs  model.rs
apps/operators/orc/src/api/project/: controller.rs  mod.rs  model.rs
apps/operators/orc/src/api/services/: config.rs  controller.rs  mod.rs  model.rs
apps/operators/orc/src/api/shit/: config.rs  controller.rs  mod.rs  model.rs
apps/operators/orc/src/api/todo/: config.rs  controller.rs  model.rs
apps/operators/orc/src/api/users/: model.rs
apps/operators/orc/src/project/: model.rs
apps/operators/orc/src/services/: error.rs  mod.rs  openapi.rs
apps/operators/protos/: Cargo.toml  project.json
apps/operators/protos/src/: main.rs
apps/operators/zerg/: Cargo.toml  project.json
apps/operators/zerg/src/: controller.rs  crdgen.rs  fixtures.rs  lib.rs  main.rs  metrics.rs  swagger.rs  telemetry.rs
apps/operators/zerg/src/api/: mod.rs
apps/operators/zerg/src/api/namespace/: config.rs  controller.rs  mod.rs  model.rs
apps/operators/zerg/src/api/pod/: config.rs  controller.rs  model.rs
apps/web/actix/: Cargo.toml  Tiltfile  project.json
apps/web/actix/src/: main.rs  swagger.rs
apps/web/actix/src/api/: mod.rs
apps/web/actix/src/api/book/: controller.rs  mod.rs  model.rs  router.rs
apps/web/actix/src/api/todo/: controller.rs  mod.rs  model.rs  router.rs
apps/web/axum/: Cargo.toml  project.json  readme.md
apps/web/axum/examples/: quick_dev.rs
apps/web/axum/src/: main.rs  swagger.rs
apps/web/axum/src/api/: mod.rs
apps/web/axum/src/api/book/: controller.rs  router.rs
apps/web/axum/src/api/login/: controller.rs  mod.rs
apps/web/axum/src/api/todo/: controller.rs  router.rs
apps/web/axum/src/api/users/: controller.rs  model.rs
apps/web/axum/src/log/: mod.rs
apps/web/axum/src/web/: error.rs  mod.rs
apps/web/axum/web-folder/: index.html
apps/web/ntex/: Cargo.toml  project.json
apps/web/ntex/src/: main.rs
apps/web/salvo/: Cargo.toml  project.json
apps/web/salvo/src/: main.rs
apps/web/salvo/src/api/: mod.rs
apps/web/salvo/src/api/todo/: mod.rs  routes.rs
ci/: cloudbuild-run-container.yaml
kcl/: kcl-run-oci.yaml  project.json
kcl/cloud/dev/: project.json
libs/general/: Cargo.toml  project.json
libs/general/src/: b64.rs  envs.rs  lib.rs  socket_addrs.rs  time.rs
libs/generic_api/: Cargo.toml  project.json
libs/generic_api/src/: config.rs  handlers.rs  lib.rs
libs/k8s/: Cargo.toml  project.json
libs/models/: Cargo.toml  project.json
libs/models/src/: lib.rs
libs/models/src/book/: model.rs
libs/models/src/shit/: mod.rs  model.rs
libs/models/src/todo/: model.rs
libs/playground/: Cargo.toml  project.json
libs/playground/src/: lib.rs
libs/playground/src/rust10x/: mod.rs
libs/proc_macros/: project.json
libs/proc_macros/db-resource/: Cargo.toml
libs/proc_macros/db-resource/src/: lib.rs
libs/proc_macros/reflective/: Cargo.toml
libs/proc_macros/src/: lib.rs
libs/services/: Cargo.toml  project.json
libs/services/src/: lib.rs
libs/services/src/errors/: ntex.rs
libs/services/src/kube/: mod.rs  service.rs
libs/services/src/mongo/: connector.rs  filter_and_options.rs  mod.rs  service.rs
libs/services/src/mongo/struct_way/: adapter.rs  builder.rs  composite.rs  mod.rs  observer.rs  service.rs  singleton.rs  strategy.rs
libs/services/src/redis/: connector.rs  mod.rs  subscribe.rs  users.rs
libs/services/src/swagger/: mod.rs  ntex.rs
libs/shared/: Cargo.toml  project.json
libs/shared/src/: app_state.rs  lib.rs  validation.rs
libs/webserver/axum/: Cargo.toml  project.json
libs/webserver/axum/src/: auth_error.rs  lib.rs  logger.rs
manifests/: compose.yaml  data.json  podinfo.bundle.cue  random.sh  schema.k
manifests/base/: deployment.yml  kusion.yaml  service-account.yaml  service.yml
