[workspace]
resolver = '2'
members = [
    'libs/models',
    'libs/services',
    'apps/web/actix',
    'apps/web/salvo',
    'apps/web/ntex',
    'apps/web/axum',
    'apps/operators/zerg',
    'apps/operators/protos',
    'libs/shared',
    'libs/general',
    'apps/operators/orc',
    'libs/proc_macros',
    'libs/generic_api',
    'apps/micro/book',
    'apps/ci/ci_example',
    'libs/k8s',
]

[workspace.dependencies]
proc_macros = { path = 'libs/proc_macros' }
sentry = "0.34.0"

[profile.release]
opt-level = 'z'
codegen-units = 1
strip = true
lto = true
