[package]
name = "generic_api"
version = "0.1.0"
edition = "2021"

[dependencies]
proc_macros = {workspace = true}
services = {path = "../services"}
shared = {path = "../shared"}
models = {path = "../models"}
ntex = { version = "1.2", features = ["tokio", "openssl"] }
mongodb = { version = "2.8", features = ["default"] }
validator = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4.2", features = ["actix_extras"] }
futures = "0.3"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
