[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
#shared = {path = "../shared"}
proc_macros = {workspace = true}
services = {path = "../services"}
ts-rs = { version = '8.1', features = ['serde-compat'] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0"
validator = "0.18"
mongodb = { version = "2.8", features = ["default"] }
utoipa = { version = "4.2", features = ["actix_extras"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
