[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
general = {path = "../general"}
shared = {path = "../shared"}
proc_macros = {workspace = true}
#proc_macros = {path = "../proc_macros"}
futures = "0.3"
async-trait = "0.1"
ntex = { version = "1.2", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8", features = ["default"] }
validator = { version = '0.18', features = ['derive'] }
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.0", features = ["actix-web"] }
bb8-redis = { version = "0.15" }
redis = { version = "0.25", features = ["serde", "serde_json", "async-trait"] }
bb8 = { version = "0.8", features = ["default"] }
anyhow = "1.0.83"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
