[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
#ntex = { version = "2.0", features = ["tokio"] }
bb8 = { version = "0.8", features = ["default"] }
bb8-redis = { version = "0.15" }
mongodb = { version = "2.8", features = ["default"] }
validator = { version = '0.18', features = ['derive'] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
