[package]
name = "ci_ci_example"
version = "0.1.0"
edition = "2021"


[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
clap = { version = "4.5", features = ['derive'] }
#k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
#kube = { version = "0.83.0", features = ["derive", "runtime"] }
serde = { version = "1.0", features = ['derive'] }
serde_json = { version = "1.0" }
futures = {version = "0.3", features = []}

