[package]
name = "manager_alina"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = "0.9.0-alpha.1"
fake = { version = "2.9", features = ["derive"] }
config = "0.14.0"
tokio = "1.38.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
derive_more = "0.99"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
