[package]
name = "micro_book"
version = "0.1.0"
edition = "2021"


[dependencies]
general = {path = "../../../libs/general"}
ntex = "1.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.37", features = ["full"] }
redis = "0.25"
futures = "0.3"
mongodb = { version = "2.8", features = ["default"] }
bb8-redis = { version = "0.15" }
bb8 = { version = "0.8", features = ["default"] }
futures-util = "0.3.30"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
