[package]
name = "micro_book"
version = "0.1.0"
edition = "2021"


[dependencies]
general = {path = "../../../libs/general"}
#ntex = { version = "1.2", features = ["tokio"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.37", features = ["full", "sync"] }
redis = { version = "0.25", features = ["tokio-comp", "aio", "tokio-rustls-comp"] }
futures = "0.3"
mongodb = { version = "2.8", features = ["default"] }
bb8-redis = { version = "0.15" }
bb8 = { version = "0.8", features = ["default"] }
futures-util = "0.3.30"
deadpool-redis = { version = "0.15", features = ["serde"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
