[package]
name = "operators_zerg"
version = "0.1.0"
edition = "2021"


[dependencies]
kube = { version = "0.91", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["latest"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
