[package]
name = "operators_zerg"
version = "0.1.0"
edition = "2021"


[dependencies]
proc_macros= {workspace = true}
kube = { version = "0.91", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["latest"] }
ntex = { version = "1.2", features = ["tokio", "default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = '1.37', features = ['macros', 'signal', 'rt-multi-thread'] }
validator = "0.18"
mongodb = { version = "2.8", features = ["default"] }
redis = { version = "0.25", features = ["serde", "serde_json", "async-trait"] }
utoipa = { version = "4.2", features = [] }
utoipa-swagger-ui = { version = "7.0", features = [] }
utoipa-redoc = { version = "4.0", features = [] }
utoipa-rapidoc = { version = "4.0", features = [] }
ts-rs = { version = '8.1', features = ['serde-compat'] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
