[package]
name = "web_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
general = {path = "../../../libs/general"}
actix-web = { version = "4.5" }
serde = { version = "1.0" }
actix-rt = { version = "2.9" }
serde_json = { version = "1.0" }
#jsonwebtoken = {version = "9.3"}
#tokio = { version = '1.37', features = ['macros', 'signal', 'rt-multi-thread'] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
