[package]
name = "web_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
proc_macros = {workspace = true}
services = {path = "../../../libs/services"}
shared = {path = "../../../libs/shared"}
general = {path = "../../../libs/general"}
models = {path = "../../../libs/models"}
#generic_api = {path = "../../../libs/generic_api"}
actix-web = { version = "4.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
actix-rt = { version = "2.9" }
mongodb = { version = "2.8", features = ["default"] }
redis = { version = "0.25", features = ["serde", "serde_json", "async-trait"] }
bb8-redis = { version = "0.15" }
bb8 = { version = "0.8", features = ["default"] }
env_logger = "0.11"
log = "0.4"
utoipa = { version = "4.2", features = [] }
utoipa-swagger-ui = { version = "7.0", features = [] }
futures = "0.3"
#jsonwebtoken = {version = "9.3"}
#tokio = { version = '1.37', features = ['macros', 'signal', 'rt-multi-thread'] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
