[package]
name = "web_axum"
version = "0.1.0"
edition = "2021"


[dependencies]
proc_macros = { workspace = true }
services = { path = "../../../libs/services" }
shared = { path = "../../../libs/shared" }
general = { path = "../../../libs/general" }
models = { path = "../../../libs/models" }
axum = { version = "0.7", features = ["default"] }
tokio = { version = '1.37', features = ['macros', 'signal', 'rt-multi-thread'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8", features = ["default"] }
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
futures = "0.3.30"
redis = { version = "0.25", features = ["serde", "serde_json", "async-trait"] }
bb8-redis = { version = "0.15" }
bb8 = { version = "0.8", features = ["default"] }
utoipa = { version = "4.2", features = [] }
utoipa-swagger-ui = { version = "7.0", features = ["axum"] }
utoipa-redoc = { version = "4.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0", features = ["axum"] }
utoipa-scalar = { version = "0.1", features = ["axum"] }
validator = { version = "0.18", features = ["derive"] }
#jsonwebtoken = {version = "9.3"}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
