[package]
name = "web_ntex"
version = "0.1.0"
edition = "2021"


[dependencies]
ntex = { version = "1.0", features = ["tokio", "openssl"] }
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.3"
tokio = "1.37.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
