[package]
name = "web_ntex"
version = "0.1.0"
edition = "2021"


[dependencies]
general = { path = "../../../libs/general" }
ntex = { version = "2.0", features = ["tokio", "default"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
tokio = { version = "1.37", features = ["macros", "signal", "rt-multi-thread"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
