[package]
name = "web_salvo"
version = "0.1.0"
edition = "2021"


[dependencies]
salvo = { version = "0.67", features = ["full", "caching-headers", "compression", "oapi", "logging"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
ts-rs = { version = '8.1', features = ['serde-compat'] }
validator = { version = '0.18', features = ['derive'] }
sqlx = { version = '0.7', default-features = false, features = ['postgres', 'runtime-tokio-rustls', 'macros', 'uuid', 'chrono'] }
uuid = { version = "1.8", features = ["serde", "v4", "js"] }
chrono = {version = "0.4", features = ["serde"] }
once_cell = "1.19"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
