[package]
name = "webserver_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["default"] }
tokio = { version = '1.37', features = ['macros', 'signal', 'rt-multi-thread'] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
